# sun

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: CI.yml
resource/: host.yaml
src/: arg.rs  config.rs  entity.rs  lib.rs  main.rs  misc.rs
tests/: test_arg.rs  test_config.rs  test_misc.rs
