[package]
name = "sun"
version = "0.1.0"
authors = ["AhnSeongHyun <sh84.ahn@gmail.com>"]
edition = "2018"
repository = "https://github.com/AhnSeongHyun/sun"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33.0"
yaml-rust = "0.4"